card 58, display social media on mobile, fixed mobile accessibility text and updated brand colours

--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -41,9 +41,9 @@ $info-color: #89c4f4;      // jordy blue - accessibility passed with dark text o
 $googleplus-color: #dd4b39;
 $facebook-color: #3b5998;
 $flickr-color: #ff0084;
-$linkedin-color: #0976b4;
-$twitter-color: #55acee;
-$youtube-color: #e52d27;
+$linkedin-color: #0077b5;
+$twitter-color: #1da1f2;
+$youtube-color: #cd201f;
 
 $visited-link-color: #551a8b; // purple
 
